--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.2",
     "@types/uuid": "^9.0.7",
+    "jimp": "^1.6.0",
     "typescript": "~5.8.3"
   },
   "private": true
